Переместил TypeComponent в Metadata